Include "source" field in error responses from mongos

XMLWordPrintableJSON

    • Server Programmability
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When a mongos returns an error from a remote node there is no indication of where the error originated. This is requested by drivers, so that they can determine if the mongos is malfunctioning versus a mongod instance. This would also be helpful for debugging and administration purposes. Right now, when errors such as InterruptedAtShutdown are sent from a mongod node through mongos drivers will follow the sdam spec and disconnect from mongos when this isn't necessary.

      This ticket suggests creating a "source" field (or similarly named) for error responses that encodes this information.

            Assignee:
            Unassigned
            Reporter:
            Lamont Nelson
            Votes:
            3 Vote for this issue
            Watchers:
            25 Start watching this issue

              Created:
              Updated: