Append a "host" attribute to error responses (backport SERVER-50459)